# image_processor

image_processor/: CMakeLists.txt  image_processor.cpp
image_processor/examples/: test
image_processor/lib/BMP/: BMP.cpp  BMP.h
image_processor/lib/color/: colors.cpp  colors.h
image_processor/lib/filters/: blur.cpp  blur.h  crop.cpp  crop.h  edge.cpp  edge.h  filter.cpp  filter.h  grayscale.cpp  grayscale.h  negative.cpp  negative.h  sharp.cpp  sharp.h
image_processor/lib/parser/: parser.cpp  parser.h  unixpath.cpp
